chore(timer): 更新 timer 源码相关注释 #4

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "Disabled",
     "cSpell.words": [
+        "Immediates",
         "Libuv",
         "yuzhanglong"
     ]
