--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,4 @@
 {
-    "C_Cpp.errorSquiggles": "Disabled",
-    "cSpell.words": [
-        "Immediates",
-        "Libuv",
-        "yuzhanglong"
-    ]
+  "C_Cpp.errorSquiggles": "Disabled",
+  "cSpell.words": ["Immediates", "Libuv", "yuzhanglong"]
 }
