--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,13 @@
     "yuzhanglong"
   ],
   // 将书签配置保存在项目中以方便随 Git 分发
-  "bookmarks.saveBookmarksInProject": true
+  "bookmarks.saveBookmarksInProject": true,
+  "files.associations": {
+    "cstddef": "c",
+    "queue": "c",
+    "*.inc": "c",
+    "typeindex": "c",
+    "typeinfo": "c",
+    "*.idl": "c"
+  }
 }
